style: gap fix

--- a/src/components/HomepageFeatures.module.css
+++ b/src/components/HomepageFeatures.module.css
@@ -56,8 +56,7 @@
   flex-wrap: wrap;
   max-height: 600px;
   padding: 0;
-  gap: 89px;
-  column-gap: 32px;
+  gap: 89px 32px;
   margin-bottom: 144px;
 }
 
